change domain and rebuild

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://byeol.my.id"
+baseURL = "https://blog.byeol.my.id"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "Byeol"
